# judge-jitter

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: examples.jsonl  judge_prompt.txt
src/judge_jitter/: cli.py  config.py  data.py  judge.py  metrics.py  report.py  storage.py
tests/: test_data.py  test_metrics.py
